# cradle

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.php  justfile
.github/workflows/: build.yaml  ci.yaml
context-integration-tests/: Cargo.toml
context-integration-tests/src/: main.rs
examples/: readme.rs
memory-test/: Cargo.toml
memory-tests/: Cargo.toml
src/: child_output.rs  cmd_argument.rs  cmd_input.rs  cmd_output.rs  collected_output.rs  common_re_exports.rs.snippet  config.rs  context.rs  context_integration_tests.rs  cradle_panic.rs  error.rs  input.rs  lib.rs  macros.rs  output.rs  prelude.rs  run_result.rs  test_helper.rs  test_script.rs  test_utils.rs
src/test_executables/: helper.rs  panic.rs
tests/: integration.rs  panic_source_locations.rs
