[package]
name = "cradle"
version = "0.2.2"
description = "Execute child processes with ease"
authors = ["Sönke Hahn <soenkehahn@gmail.com>"]
license = "CC0-1.0"
edition = "2018"
repository = "https://github.com/soenkehahn/cradle"
homepage = "https://github.com/soenkehahn/cradle"
keywords = ["child", "child-process", "command", "process", "shell"]
categories = ["filesystem", "os"]
exclude = ["/.github"]

[workspace]
members = [".", "memory-tests"]

[dependencies]
rustversion = "1.0.4"

[dev-dependencies]
executable-path = "1.0.0"
lazy_static = "1.4.0"
pretty_assertions = "1.0.0"
tempfile = "3.2.0"
unindent = "0.1.7"
# cradle only indirectly depends on bitflags (for tests).
# But newer bitflags versions don't compile with older compilers anymore.
# So we put in this exact dependency to force a working bitflags version.
bitflags = "=1.2.1"

[[bin]]
name = "context_integration_tests"
path = "src/context_integration_tests.rs"
required-features = ["test_executables"]

[[bin]]
name = "test_executables_helper"
path = "src/test_executables/helper.rs"
required-features = ["test_executables"]

[target.'cfg(unix)'.dependencies.gag]
version = "0.1.10"
optional = true

[target.'cfg(unix)'.dependencies.executable-path]
version = "1.0.0"
optional = true

[target.'cfg(unix)'.dependencies.nix]
version = "0.22.2"
optional = true

[features]
test_executables = ["gag", "executable-path", "nix"]
