[package]
name = "cradle"
version = "0.2.2"
description = "Execute child processes with ease"
authors = ["Sönke Hahn <soenkehahn@gmail.com>"]
license = "CC0-1.0"
edition = "2018"
repository = "https://github.com/soenkehahn/cradle"
homepage = "https://github.com/soenkehahn/cradle"
keywords = ["child", "child-process", "command", "process", "shell"]
categories = ["filesystem", "os"]
exclude = ["/.github"]

[workspace]
members = [".", "context-integration-tests", "memory-tests"]

[dependencies]
rustversion = "1"

[dev-dependencies]
executable-path = "1"
lazy_static = "1"
pretty_assertions = "1"
tempfile = "3"
unindent = "0.1"
bitflags = "1"

[[bin]]
name = "test_executables_helper"
path = "src/test_executables/helper.rs"
required-features = ["test_executables"]

[[bin]]
name = "test_executables_panic"
path = "src/test_executables/panic.rs"
required-features = ["test_executables"]

[target.'cfg(unix)'.dependencies.nix]
version = "0.22"
optional = true

[features]
test_executables = ["nix"]
